<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Cliente.RegistroClienteActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_icono_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/txtRegistroC"
            android:textSize="24dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/edtxNombreC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtxNombreC" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">


            <EditText
                android:id="@+id/edtxCorreoC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtxCorreoC"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/edtxContraseñaC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtxContraseñaC"
                android:inputType="textPassword"
                android:paddingEnd="48dp"/>


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/edtxConContraseñaC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtxConContraseñaC"
                android:inputType="textPassword"
                android:paddingEnd="48dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegistrarC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/btnRegistrarC"
            app:cornerRadius="14dp"
            android:backgroundTint="@color/dorado"/>


    </androidx.appcompat.widget.LinearLayoutCompat>


</ScrollView>