<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".Cliente.LoginClienteActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_icono_round" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/txtLoginC"
            android:textSize="24dp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">

            <EditText
                android:id="@+id/edtxCorreoC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtxCorreoC"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:endIconMode="password_toggle">

            <EditText
                android:id="@+id/edtxContraseñaC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edtxContraseñaC"
                android:inputType="textPassword"
                android:paddingEnd="48dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLoginV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="@string/btnLoginC"
            android:backgroundTint="@color/dorado"/>


        <TextView
            android:id="@+id/tvRegistrarseC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tvRegistrarseC"
            android:textColor="@color/azul_claro"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>