<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro"
    tools:context=".Vendedor.Productos.AgregarProductoActivity">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:background="@color/negro_claro"
        android:layout_height="50dp">

        <TextView
            android:text="@string/txtAgregarProd"
            android:layout_centerInParent="true"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/gris"/>

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/imagenRL"
        android:layout_below="@id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgAgregarProd"
            android:layout_centerInParent="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/agregar_producto"
            android:layout_width="100dp"
            android:layout_height="100dp"/>


    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/imagenRL"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/imagenesProductos"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/imagenes_elegidas"
                app:spanCount="4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_NombreProd"
                android:layout_below="@+id/imagenesProductos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtxNombreProd"
                    android:hint="@string/edtxNombreProd"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_DescripcionProd"
                android:layout_below="@+id/TI_NombreProd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtxDescripcionProd"
                    android:hint="@string/edtxDescripcionProd"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_Precio"
                android:layout_below="@+id/TI_DescripcionProd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtxPrecio"
                    android:hint="@string/edtxPrecio"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchDesc"
                android:layout_below="@id/TI_Precio"
                android:text="@string/txtDescuento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                app:trackTint="@color/contorno_switch"
                app:thumbTint="@color/color_switch"/>



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_Descuento"
                android:layout_below="@id/switchDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtxPrecioDesc"
                    android:hint="@string/edtxPrecioDesc"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/TI_NotaDesc"
                android:layout_below="@id/TI_Descuento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtxNotaDesc"
                    android:hint="@string/edtxNotaDesc"
                    android:inputType="textCapSentences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAgregarProd"
        android:text="@string/btnAgregarProd"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        app:cornerRadius="10dp"
        android:backgroundTint="@color/dorado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>